eks/helm/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: jenkins-ingress
  namespace: kube-system
spec:
  tls: 
  - hosts:
    - jenkins-helm.parity.evise-nonprod.com
    secretName: jenkins-cert 
  rules:
    - host: jenkins-helm.parity.evise-nonprod.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
